--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,20 @@
-body{
+
+.cont{
+  box-sizing:border-box;
   display: flex;
+  width: 100%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .contiener-parents{
+  margin-left: -80px;
   display: flex;
   width: 600px;
   height: 782px;
   background-image: url(../img/left-bg.png);
   background-repeat: no-repeat;
   background-size:cover;
-  /*border: 2px solid #000;*/
   background-position: right 1px bottom 1px;
 }
 .contianer-text{
